--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 #内核源码地址
-KERNEL_SOURCE=https://github.com/xNombre/msm-4.4
+KERNEL_SOURCE=https://github.com/Mr-Yuling/msm-4.4
 #内核源码分支
 KERNEL_SOURCE_BRANCH=q-eas-infinity
 #内核编译配置
@@ -83,5 +83,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # 构建内核直链接Build boot images
-BUILD_BOOT_IMG=true
+BUILD_BOOT_IMG=false
 SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
