--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SOURCE_BRANCH=q-eas-infinity
 #内核编译配置
 KERNEL_CONFIG=gemini_defconfig
 #内核Image.gz-dtb or Image
-KERNEL_IMAGE_NAME=Image.lz4-dtb
+KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 #参数
 EXTRA_CMDS:LD=ld.lld
