--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 #内核源码地址
-KERNEL_SOURCE=https://github.com/Mr-Yuling/msm-4.4
+KERNEL_SOURCE=https://github.com/unifreq/linux-6.1.y
 #内核源码分支
-KERNEL_SOURCE_BRANCH=q-eas-infinity
+KERNEL_SOURCE_BRANCH=main
 #内核编译配置
-KERNEL_CONFIG=gemini_defconfig
+KERNEL_CONFIG=defconfig
 #内核Image.gz-dtb or Image
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
@@ -48,13 +48,13 @@ CLANG_VERSION=clang-r416183b
 ########################################################################################################################################################
 
 # 开启 LXC and DOCKER
-LXC_DOCKER=true
+LXC_DOCKER=false
 
 # 是否打入LXC补丁
-LXC_PATCH=true
+LXC_PATCH=false
 
 # 关闭CONFIG_ANDROID_PARANOID_NETWORK配置防止docker and lxc出现网络问题
-ANDROID_PARANOID_NETWORK_OFF=true
+ANDROID_PARANOID_NETWORK_OFF=false
 
 #######################################################################################################################################################
 
