--- a/.github/workflows/armbian.yml
+++ b/.github/workflows/armbian.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: 工作配置
       run: |
-        echo "LXC_DOCKER=$(cat armbian.env | grep -w "LXC_DOCKER" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
+        echo "CAN=$(cat armbian.env | grep -w "CAN" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
         echo "KERNEL_SOURCE=$(cat armbian.env | grep -w "KERNEL_SOURCE" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
         echo "KERNEL_SOURCE_BRANCH=$(cat armbian.env | grep -w "KERNEL_SOURCE_BRANCH" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
         echo "KERNEL_CONFIG=$(cat armbian.env | grep -w "KERNEL_CONFIG" | head -n 1 | cut -d "=" -f 2)" >> $GITHUB_ENV
@@ -37,15 +37,13 @@ jobs:
         git clone ${{ env.KERNEL_SOURCE }} -b ${{ env.KERNEL_SOURCE_BRANCH }} armbian-kernel --depth=1
 
            
-    - name: 开启lxc和docker配置
-      if: env.LXC_DOCKER == 'true'
+    - name: 开启can配置
+      if: env.CAN == 'true'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        wget https://raw.githubusercontent.com/Mr-Yuling/lxc-docker/main/LXC-DOCKER-OPEN-CONFIG.sh
-        chmod 777 LXC-DOCKER-OPEN-CONFIG.sh
-        ./LXC-DOCKER-OPEN-CONFIG.sh android-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }} -w
-        sed -i '/SCHED_WALT/d' android-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }}
-        echo "# CONFIG_SCHED_WALT is not set" >> android-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }}
+        https://raw.githubusercontent.com/Mr-Yuling/LXC-DOCKER-KernelSU_Action/main/check_can_config.sh
+        chmod 777 check_can_config.sh
+        ./check_can_config.sh armbian-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }} -w
   
     - name: 设置ccache缓存
       if: env.ENABLE_CCACHE == 'true'
