--- a/armbian.env
+++ b/armbian.env
@@ -7,8 +7,8 @@ KERNEL_CONFIG=defconfig
 ARCH=arm64
 
 ########################################################################################################################################################
-# 开启 LXC and DOCKER
-LXC_DOCKER=false
+# 开启 CAN
+CAN=true
 
 #######################################################################################################################################################
 # 开启缓存Ccache
