--- a/.github/workflows/armbian.yml
+++ b/.github/workflows/armbian.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         echo "BUILD_TIME=$(TZ=Asia/Shanghai date "+%Y%m%d%H%M")" >> $GITHUB_ENV
         sudo apt-get update
-        sudo apt-get install -y binfmt-support qemu-user-static gcc-aarch64-linux-gnu kernel-package u-boot-tools fakeroot simg2img img2simg mkbootimg bison git python2 libssl-dev build-essential libncurses5-dev bzip2 
+        sudo apt-get install -y wget binfmt-support qemu-user-static gcc-aarch64-linux-gnu kernel-package u-boot-tools fakeroot simg2img img2simg mkbootimg bison git python2 libssl-dev build-essential libncurses5-dev bzip2 
         mkdir -p $GITHUB_WORKSPACE/kernel_workspace
 
     - name: 下载内核源码
@@ -38,10 +38,9 @@ jobs:
 
            
     - name: 开启can配置
-      if: env.CAN == 'true'
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        https://raw.githubusercontent.com/Mr-Yuling/LXC-DOCKER-KernelSU_Action/main/check_can_config.sh
+        wget https://raw.githubusercontent.com/Mr-Yuling/LXC-DOCKER-KernelSU_Action/main/check_can_config.sh
         chmod 777 check_can_config.sh
         ./check_can_config.sh armbian-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }} -w
   
